# workspace-wandlebots

./: .env  extralibs.txt  pyproject.toml  pyrightconfig.json
models/: readme.txt
your_nova_app/: prototype_voice.py  start_here.py  start_here_new.py  start_here_voice.py
your_nova_app/macos/: Felix_en_mac_v3_0_0.ppn  bartender_en_mac_v3_0_0.rhn
your_nova_app/programs/: mcp_bartender.py
your_nova_app/windows/: Felix_en_windows_v3_0_0.ppn  bartender_en_windows_v3_0_0.rhn
