[project]
name = "your_nova_app"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "wandelbots-nova[novax,nova-rerun-bridge]>=3.5.3,<4",
    "python-decouple~=3.8",
    "requests==2.32.5",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "docopt==0.6.2",
    "idna==3.11",
    "pipreqs==0.4.13",
    "pvporcupine==3.0.5",
    "pvrecorder==1.2.7",
    "pvrhino==3.0.5",
    "urllib3==2.5.0",
    "yarg==0.1.10",
    "opencv-python>=4.11.0.86",
    "numpy>=2.3.4",
    "mcp[cli]>=1.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

